tests/a/tests/provenance/fail/let/let.0.stderr
error: expected (root,root), found (*,root)
 --> tests/provenance/fail/let/let.0.rs:8:13
  |
8 |     let y = x;
  |             ^
